--- a/homework_2.0.html
+++ b/homework_2.0.html
@@ -17,7 +17,7 @@
 <body>
     <img src="zombie-apocalypse.jpg" alt="here zombies" width="300" height="200" class="leftpic">
     <h1>
-        <align="center" style="color:rgb(13, 177, 7)"> Things or survive in zombie apocalypse
+        <align="center" style="color:rgb(13, 177, 7)"> Things for survive in zombie apocalypse
     </h1>
 
     <ul>
